--- a/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
+++ b/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
@@ -14,7 +14,7 @@
         android:padding="20dp">
 
         <EditText
-            android:id="@+id/editTextName"
+            android:id="@+id/editTextNombre"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
@@ -35,8 +35,8 @@
             android:hint="Código"
             android:inputType="textPersonName"
             android:paddingLeft="@dimen/margin_left_form"
-            app:layout_constraintStart_toStartOf="@+id/editTextName"
-            app:layout_constraintTop_toBottomOf="@+id/editTextName" />
+            app:layout_constraintStart_toStartOf="@+id/editTextNombre"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -54,15 +54,6 @@
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="@+id/editTextCodigo" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="40dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/spinnerUbicacion"
-            app:layout_constraintStart_toStartOf="@+id/spinnerTipo"
-            app:layout_constraintTop_toTopOf="@+id/spinnerUbicacion"
-            app:srcCompat="@drawable/ic_image2" />
-
         <Spinner
             android:id="@+id/spinnerUbicacion"
             android:layout_width="wrap_content"
@@ -71,19 +62,56 @@
             app:layout_constraintStart_toStartOf="@+id/editTextCodigo"
             app:layout_constraintTop_toBottomOf="@+id/editTextCodigo" />
 
-        <EditText
-            android:id="@+id/editTextDescripcion"
+        <TextView
+            android:id="@+id/editTextImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@android:color/background_light"
+            android:gravity="center|right"
+            android:hint="img.jpg"
+            android:inputType="textPersonName"
+            android:paddingRight="@dimen/margin_left_form"
+            app:layout_constraintBottom_toBottomOf="@+id/spinnerUbicacion"
+            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
+            app:layout_constraintStart_toStartOf="@+id/spinnerTipo"
+            app:layout_constraintTop_toTopOf="@+id/spinnerUbicacion"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageViewIcon"
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextImage"
+            app:layout_constraintStart_toStartOf="@+id/editTextImage"
+            app:layout_constraintTop_toTopOf="@+id/editTextImage"
+            app:srcCompat="@drawable/ic_image2" />
+
+        <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginTop="16dp"
-            android:background="@android:color/background_light"
-            android:gravity="start"
-            android:hint="@string/hint_descripcion"
-            android:inputType="textPersonName"
-            android:paddingLeft="@dimen/margin_left_form"
-            app:layout_constraintEnd_toEndOf=""
-            app:layout_constraintStart_toStartOf=""
-            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/editTextDescripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:background="@android:color/background_light"
+                    android:gravity="start"
+                    android:hint="@string/hint_descripcion"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="@dimen/margin_left_form" />
+            </LinearLayout>
+        </ScrollView>
 
         <ImageView
             android:id="@+id/imageView"
@@ -91,8 +119,9 @@
             android:layout_height="200dp"
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
