--- a/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
+++ b/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
@@ -71,10 +71,10 @@
             android:hint="img.jpg"
             android:inputType="textPersonName"
             android:paddingRight="@dimen/margin_left_form"
-            app:layout_constraintBottom_toBottomOf="@+id/spinnerUbicacion"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewIcon"
             app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
-            app:layout_constraintStart_toStartOf="@+id/spinnerTipo"
-            app:layout_constraintTop_toTopOf="@+id/spinnerUbicacion"
+            app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
+            app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
@@ -82,47 +82,23 @@
             android:layout_width="40dp"
             android:layout_height="0dp"
             android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextImage"
-            app:layout_constraintStart_toStartOf="@+id/editTextImage"
-            app:layout_constraintTop_toTopOf="@+id/editTextImage"
+            app:layout_constraintBottom_toBottomOf="@+id/spinnerUbicacion"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/spinnerUbicacion"
             app:srcCompat="@drawable/ic_image2" />
 
-        <ScrollView
-            android:id="@+id/scrollView2"
+        <EditText
+            android:id="@+id/editTextDescripcion"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/editTextDescripcion"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@android:color/background_light"
-                    android:gravity="start"
-                    android:hint="@string/hint_descripcion"
-                    android:inputType="textPersonName"
-                    android:paddingLeft="@dimen/margin_left_form" />
-            </LinearLayout>
-        </ScrollView>
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:background="@android:color/background_light"
+            android:gravity="start"
+            android:hint="@string/hint_descripcion"
+            android:inputType="textPersonName"
+            android:paddingLeft="@dimen/margin_left_form"
+            app:layout_constraintStart_toStartOf="@+id/spinnerUbicacion"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
