--- a/SATapp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/SATapp/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.gonzaloandcompany.satapp.ui.home.HomeFragment"
+        android:name="com.gonzaloandcompany.satapp.ui.inventariables.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
