--- a/SATapp/app/src/main/res/layout/fragment_tickets.xml
+++ b/SATapp/app/src/main/res/layout/fragment_tickets.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ticketListLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:visibility="visible">
 
 
     <ImageView
         android:id="@+id/ticketListImg"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="@dimen/spacing_large"
         android:layout_marginTop="@dimen/spacing_middle"
-        android:layout_marginRight="@dimen/spacing_medium" />
+        android:layout_marginRight="@dimen/spacing_large"
+        app:srcCompat="@drawable/ic_computer" />
 
     <View
         android:layout_width="@dimen/spacing_medium"
