--- a/SATapp/app/src/main/res/values/colors.xml
+++ b/SATapp/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#D50613</color>
-    <color name="colorPrimaryDark">#9b0000</color>
-    <color name="colorAccent">#ff533e</color>
+    <color name="colorPrimaryDark">#9B0000</color>
+    <color name="colorAccent">#FF533E</color>
 
 
     <color name="grey_3">#f7f7f7</color>
