--- a/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
+++ b/SATapp/app/src/main/res/layout/dialog_new_inventariable.xml
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextCodigo" />
 
         <TextView
-            android:id="@+id/editTextImage"
+            android:id="@+id/textViewtImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/background_grey"
