--- a/SATapp/app/src/main/res/layout/activity_ticket_create.xml
+++ b/SATapp/app/src/main/res/layout/activity_ticket_create.xml
@@ -91,5 +91,17 @@
         app:layout_constraintStart_toStartOf="@+id/ticketCreateDevice"
         app:layout_constraintTop_toBottomOf="@+id/ticketCreateDevice" />
 
+    <Button
+        android:id="@+id/ticketCreateSave"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="@string/save"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="@+id/ticketCreateTech"
+        app:layout_constraintStart_toStartOf="@+id/ticketCreateTech"
+        app:layout_constraintTop_toBottomOf="@+id/ticketCreateTech" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
