falta mostrar imagen y un pequeño fallo en el filtro

--- a/SATapp/app/src/main/res/values/styles.xml
+++ b/SATapp/app/src/main/res/values/styles.xml
@@ -17,4 +17,5 @@
         <item name="mrl_rippleHover">true</item>
         <item name="mrl_rippleAlpha">0.2</item>
     </style>
+    <string name="button_cancelar">Cancelar</string>
 </resources>
