--- a/SATapp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/SATapp/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.gonzaloandcompany.satapp.ui.home.HomeFragment"
+        android:name="com.gonzaloandcompany.satapp.ui.home.InventariableFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_inventariable_list" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
