--- a/SATapp/app/src/main/res/layout/fragment_inventariable.xml
+++ b/SATapp/app/src/main/res/layout/fragment_inventariable.xml
@@ -8,10 +8,8 @@
 
     <ImageView
         android:id="@+id/imageViewInventariable"
-        android:layout_width="168dp"
-        android:layout_height="166dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,8 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:text="TextView"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageViewInventariable"
         app:layout_constraintTop_toTopOf="@+id/imageViewInventariable" />
 
