--- a/SATapp/app/src/main/res/layout/activity_inventariable_detail.xml
+++ b/SATapp/app/src/main/res/layout/activity_inventariable_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.inventariables.InventariableDetailActivity">
+    tools:context=".ui.home.InventariableDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
