--- a/SATapp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/SATapp/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.gonzaloandcompany.satapp.ui.notifications.NotificationsFragment"
+        android:name="com.gonzaloandcompany.satapp.ui.users.UsersFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_users_list" />
 </navigation>
