--- a/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
+++ b/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            android:background="@android:color/black"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -56,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="235dp" />
+            app:layout_constraintGuide_begin="253dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/edit_image_inventariable"
@@ -113,7 +114,7 @@
                     android:text="TextView"
                     android:textSize="22sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    app:layout_constraintStart_toStartOf="@+id/imageViewIconCode"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
