--- a/SATapp/app/src/main/res/layout/activity_register.xml
+++ b/SATapp/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.RegisterActivity">
 
+    <EditText
+        android:id="@+id/editTextComprobarPasswordRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
+        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />
+
     <TextView
         android:id="@+id/textViewRegistro"
         android:layout_width="wrap_content"
@@ -43,11 +54,11 @@
         android:id="@+id/buttonRegistrarse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="24dp"
         android:text="Registrarme"
-        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
-        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextComprobarPasswordRegistro"
+        app:layout_constraintStart_toStartOf="@+id/editTextComprobarPasswordRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/editTextComprobarPasswordRegistro" />
 
     <EditText
         android:id="@+id/editTextNameRegistro"
@@ -55,8 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="@string/allName"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="@+id/textViewRegistro"
         app:layout_constraintStart_toStartOf="@+id/textViewRegistro"
         app:layout_constraintTop_toBottomOf="@+id/textViewRegistro" />
